# Ticket-Sender

./: .gitignore  README.md  README2.md  cert.pem  generate_ids.py  index.html  key.pem  main.py  main_svg.py  prepare_svg.py  pyproject.toml  ticket_template.html  webapp.py
templates/: index.html
