[project]
name = "qr-listky-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.9.0",
    "cryptography>=46.0.7",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "pyopenssl>=26.0.0",
    "python-dotenv>=1.2.2",
    "qrcode[pil]>=8.2",
    "resend>=2.27.0",
]
